@@ -792,35 +792,36 @@ it off and back on again for the change to take. This is how the web interface d
 The following additional parameters can be specified against the aarlo platform for more
 granular control:
 
-| Field                      | Type        | Default                      | Description                                                                                                                                                                                                                              |
-| ------                     | ----        | -------                      | -----------                                                                                                                                                                                                                              |
-| `db_motion_time`           | integer     | `30` (s)                     | Duration of doorbell motion. (Arlo doorbell only indicates motion is present not that it stops)                                                                                                                                          |
-| `db_ding_time`             | integer     | `60` (s)                     | Duration of doorbell press. (Arlo doorbell only indicates doorbell was pressed, not that it was released)                                                                                                                                |
-| `recent_time`              | integer     | `60` (s)                     | Used to hold the cameras in a recent activity state after a recording or streaming event. (Streaming & recording can be over in a few seconds, without this the camera will revert to idle, possibly looking like nothing has happened.) |
-| `last_format`              | strftime    | `'%m-%d %H:%M'`              | Display format of last captured time                                                                                                                                                                                                     |
-| `serial_ids`               | boolean     | False                        | Use device IDS for the entity names.  **BE CAREFUL, WILL RENAME ALL YOUR ENTITIES**                                                                                                                                                      |
-| `request_timeout`          | time period | `60`                         | Timeout for requests sent to Arlo server. 0 means no timeout.                                                                                                                                                                            |
-| `stream_timeout`           | time period | `120`                        | Timeout for inactivity on the Arlo event stream. 0 means no timeout. Used to help with Arlo components becoming unresponsive.                                                                                                            |
-| `reconnect_every`          | integer     | `0` (minutes)                | If not 0 then force a logout every `reconect_entry` time period. Used to help with Arlo components becoming unresponsive.                                                                                                                |
-| `refresh_devices_every`    | integer     | `2` (hours)                  | Used to force a device refresh every x hours. 0 = no refreshing. Used to resolve issue with mode changes failing after several days of use.                                                                                              |
-| `refresh_modes_every`      | integer     | `0` (minutes)                | Used to force a mode refresh every x minutes. 0 = no refreshing. Used to resolve issue with mode changes failing after several days of use.                                                                                              |
-| `packet_dump`              | boolean     | `False`                      | Causes aarlo to store all the packets it sees in `/config/.aarlo/packets.dump` file. Only really needed for debugging and reverse engineering the API.                                                                                   |
-| `conf_dir`                 | string      | `'/config/.aarlo'`           | Location to store component state. (The default is fine for hass.io, docker, and virtualenv systems - don't set this value unless asked to.)                                                                                             |
-| `host`                     | string      | `https://my.arlo.com`        | Sets the host aarlo will connect to                                                                                                                                                                                                      |
-| `auth_host`                | string      | `https://ocapi-app.arlo.com` | Sets the authentication host aarlo will connect to                                                                                                                                                                                       |
-| `no_media_upload`          | boolean     | `False`                      | Used as a workaround for Arlo issues where the camera never gets a media upload notification. (Not needed in most cases.) *Deprecated, prefer `media_retry`.                                                                             |
-| `media_retry`              | list(ints)  | 5, 15, 25                    | Used as a workaround for Arlo issues where the camera never gets a media upload notification. (Not needed in most cases.)                                                                                                                |
-| `mode_api`                 | string      | `auto`                       | available options: [`v1`, `v2`] You can override this by setting this option to  v1 or v2 to use the old or new version exclusively. The default is  auto, choose based on device                                                        |
-| `save_updates_to`          | string      | ''                           | A directory to automatically save updated camera images to. Has format `$save_updates_to/$unique_id.jpg`                                                                                                                                 |
-| `save_media_to`            | string      | ''                           | A string describing where to save new media files. This include both video and snapshots. See the "Save Media" section.                                                                                                                  |
-| `verbose_debug`            | boolean     | `False`                      | Turn on extra debug. This extra information is usually not needed!                                                                                                                                                                       |
-| `library_days`             | integer     | `27` (days)                  | Change the number of days of video the component downloads from Arlo.                                                                                                                                                                    |
-| `injection_service`        | boolean     | `False`                      | If `True` enable the packet injection service.                                                                                                                                                                                           |
-| `user_agent`               | string      | `arlo`                       | Tells the system which user agent to pass to Arlo.                                                                                                                                                                                       |
-| `stream_snapshot`          | boolean     | `False`                      | If `True` will always try to start a stream before taking a snapshot. If `False` will take and idle or streaming snapshot depending on the camera state.                                                                                 |
-| `stream_snapshot_stop`     | integer     | `10` (seconds)               | How long to wait before stopping the snapshot stream, 0 means let Arlo do it.                                                                                                                                                            |
-| `snapshot_checks`          | list(ints)  | 1 and 5 (seconds)            | Force Aarlo to check for a snapshot before `mediaUploadNotification` appears.                                                                                                                                                            |
-| `snapshot_timeout`         | integer     | 65 (seconds)                 | How long to wait before abandoning snapshot attempt                                                                                                                                                                                      |
+| Field                   | Type        | Default                          | Description                                                                                                                                                                                                                              |
+| ------                  | ----        | -------                          | -----------                                                                                                                                                                                                                              |
+| `db_motion_time`        | integer     | `30` (s)                         | Duration of doorbell motion. (Arlo doorbell only indicates motion is present not that it stops)                                                                                                                                          |
+| `db_ding_time`          | integer     | `60` (s)                         | Duration of doorbell press. (Arlo doorbell only indicates doorbell was pressed, not that it was released)                                                                                                                                |
+| `recent_time`           | integer     | `60` (s)                         | Used to hold the cameras in a recent activity state after a recording or streaming event. (Streaming & recording can be over in a few seconds, without this the camera will revert to idle, possibly looking like nothing has happened.) |
+| `last_format`           | strftime    | `'%m-%d %H:%M'`                  | Display format of last captured time                                                                                                                                                                                                     |
+| `serial_ids`            | boolean     | False                            | Use device IDS for the entity names.  **BE CAREFUL, WILL RENAME ALL YOUR ENTITIES**                                                                                                                                                      |
+| `request_timeout`       | time period | `60`                             | Timeout for requests sent to Arlo server. 0 means no timeout.                                                                                                                                                                            |
+| `stream_timeout`        | time period | `120`                            | Timeout for inactivity on the Arlo event stream. 0 means no timeout. Used to help with Arlo components becoming unresponsive.                                                                                                            |
+| `reconnect_every`       | integer     | `0` (minutes)                    | If not 0 then force a logout every `reconect_entry` time period. Used to help with Arlo components becoming unresponsive.                                                                                                                |
+| `refresh_devices_every` | integer     | `2` (hours)                      | Used to force a device refresh every x hours. 0 = no refreshing. Used to resolve issue with mode changes failing after several days of use.                                                                                              |
+| `refresh_modes_every`   | integer     | `0` (minutes)                    | Used to force a mode refresh every x minutes. 0 = no refreshing. Used to resolve issue with mode changes failing after several days of use.                                                                                              |
+| `packet_dump`           | boolean     | `False`                          | Causes aarlo to store all the packets it sees in `/config/.aarlo/packets.dump` file. Only really needed for debugging and reverse engineering the API.                                                                                   |
+| `conf_dir`              | string      | `'/config/.aarlo'`               | Location to store component state. (The default is fine for hass.io, docker, and virtualenv systems - don't set this value unless asked to.)                                                                                             |
+| `host`                  | string      | `https://my.arlo.com`            | Sets the host aarlo will connect to                                                                                                                                                                                                      |
+| `auth_host`             | string      | `https://ocapi-app.arlo.com`     | Sets the authentication host aarlo will connect to                                                                                                                                                                                       |
+| `backend`               | string      | `mqtt`                           | Use mqtt or sse backend                                                                                                                                                                                                                  |
+| `no_media_upload`       | boolean     | `False`                          | Used as a workaround for Arlo issues where the camera never gets a media upload notification. (Not needed in most cases.) *Deprecated, prefer `media_retry`.                                                                             |
+| `media_retry`           | list(ints)  | 5, 15, 25                        | Used as a workaround for Arlo issues where the camera never gets a media upload notification. (Not needed in most cases.)                                                                                                                |
+| `mode_api`              | string      | `auto`                           | available options: [`v1`, `v2`] You can override this by setting this option to  v1 or v2 to use the old or new version exclusively. The default is  auto, choose based on device                                                        |
+| `save_updates_to`       | string      | ''                               | A directory to automatically save updated camera images to. Has format `$save_updates_to/$unique_id.jpg`                                                                                                                                 |
+| `save_media_to`         | string      | ''                               | A string describing where to save new media files. This include both video and snapshots. See the "Save Media" section.                                                                                                                  |
+| `verbose_debug`         | boolean     | `False`                          | Turn on extra debug. This extra information is usually not needed!                                                                                                                                                                       |
+| `library_days`          | integer     | `27` (days)                      | Change the number of days of video the component downloads from Arlo.                                                                                                                                                                    |
+| `injection_service`     | boolean     | `False`                          | If `True` enable the packet injection service.                                                                                                                                                                                           |
+| `user_agent`            | string      | `arlo`                           | Tells the system which user agent to pass to Arlo.                                                                                                                                                                                       |
+| `stream_snapshot`       | boolean     | `False`                          | If `True` will always try to start a stream before taking a snapshot. If `False` will take and idle or streaming snapshot depending on the camera state.                                                                                 |
+| `stream_snapshot_stop`  | integer     | `10` (seconds)                   | How long to wait before stopping the snapshot stream, 0 means let Arlo do it.                                                                                                                                                            |
+| `snapshot_checks`       | list(ints)  | 1 and 5 (seconds)                | Force Aarlo to check for a snapshot before `mediaUploadNotification` appears.                                                                                                                                                            |
+| `snapshot_timeout`      | integer     | 65 (seconds)                     | How long to wait before abandoning snapshot attempt                                                                                                                                                                                      |
 
 
 <a name="advanced-statuses"></a>
