@@ -13,7 +13,7 @@
   "requirements": [
     "unidecode",
     "cloudscraper>=1.2.58",
-    "pyaarlo>=0.8.0a12"
+    "pyaarlo>=0.8.0a13"
   ],
   "version": "0.8.0a7",
   "iot_class": "cloud_push"
